--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
+
+    <div class="jumbotron">
+    <h1>Train Schedule</h1> 
+    <p>Welcome to your accurate Train Scheduler</p> 
+    <div id="actualTime"></div>
+  </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
